--- a/MANIFEST.IN
+++ b/MANIFEST.IN
@@ -1,2 +1,13 @@
-include versioneer.py
-include pybiomart/_version.py
+
+include AUTHORS.rst
+
+include CONTRIBUTING.rst
+include HISTORY.rst
+include LICENSE
+include README.rst
+
+recursive-include tests *
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
+
+recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
