--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,2 @@
-[versioneer]
-VCS = git
-style = pep440
-versionfile_source = pybiomart/_version.py
-versionfile_build = pybiomart/_version.py
-tag_prefix = v
-parentdir_prefix = pybiomart-
+[bdist_wheel]
+universal = 0
